# eacompute

./: .gitignore  1.6.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPUTE_PATTERNS.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md
autoresearch/: .gitignore  FEATURE_REQUESTS.md  README.md  avx512_comparison.py  bench_kernel.py  build_prompt.py  log_result.py  orchestrator.sh  orchestrator_batch_cosine.sh  orchestrator_batch_dot.sh  orchestrator_bitonic_sort.sh  orchestrator_chacha20.sh  orchestrator_clamp.sh  orchestrator_conv2d_3x3.sh  orchestrator_cornell_box.sh  orchestrator_dot_product.sh  orchestrator_dot_u8i8.sh  orchestrator_edge_detect_fused.sh  orchestrator_frame_stats.sh  orchestrator_gather_lut.sh  orchestrator_histogram.sh  orchestrator_iir_ema.sh  orchestrator_masked_scatter.sh  orchestrator_matmul.sh  orchestrator_parse_aggregate.sh  orchestrator_particle_life.sh  orchestrator_prefix_sum.sh  orchestrator_preprocess_fused.sh  orchestrator_reduction.sh  orchestrator_saxpy.sh  orchestrator_sobel.sh  orchestrator_text_prepass.sh  orchestrator_threshold_u8.sh  orchestrator_u8_pipeline.sh  orchestrator_video_anomaly.sh  parse_agent_output.py  program.md
benchmarks/: METHODOLOGY.md
docs/: book.toml  index.html  public-api.txt
src/: bench_handler.rs  bind_common.rs  bind_cpp.rs  bind_handler.rs  bind_python.rs  bind_pytorch.rs  bind_rust.rs  desugar.rs  error.rs  inspect.rs  lib.rs  main.rs  target.rs  usage.rs
tests/: abs_tests.rs  bench_subcommand.rs  bind.rs  bind_generators.rs  cfg_tests.rs  cvt_f32_f16_width16_tests.rs  deprecation_warnings.rs  (+53 more)
(+337 files in other folders)
