[package]
name = "ea-compiler"
version = "1.7.0"
edition = "2024"
description = "Eä — compute kernel compiler"
authors = ["Peter Lukka <peter.lukka@gmail.com>"]
license = "Apache-2.0"

[dependencies]
logos = { version = "0.13", features = ["export_derive"] }
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
either = { version = "1.5", optional = true }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "ea_compiler"
path = "src/lib.rs"

[[bin]]
name = "ea"
path = "src/main.rs"

[features]
default = ["llvm"]
llvm = ["inkwell", "either"]
